Move away of deprecated Class.newInstance()..
It's deprecated in newer Java versions thus use
Class.getConstructor().newInstance().

Change-Id: Iffac25e01a46deeec809cee2576d6321fb3ba938
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>